# deposit-payof-calc

./: .env.example  .gitignore  Dockerfile  README.md  gunicorn.conf.py  pyproject.toml
app/: __init__.py
app/api/: __init__.py  dependencies.py
app/api/endpoints/: calculate.py
app/api/schemas/: __init__.py  calculate.py
app/config/: __init__.py  logging.py
app/dto/: __init__.py  deposit.py
app/services/: deposit_calculator.py
tests/api/: conftest.py  test_calculate.py
tests/services/: test_deposit_calculator.py
