[tool.poetry]
name = "deposit-payof-calc"
version = "0.1.0"
description = ""
authors = ["e.sergeev <egor.sierghieiev@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
pydantic-settings = "^2.3.4"
sentry-sdk = "^2.8.0"
coverage = "^7.5.4"
python-dateutil = "^2.9.0.post0"
pytest = "^8.2.2"
gunicorn = "^22.0.0"
uvicorn = "^0.30.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
